testsuite/vhdl/syntax/test_data/label_missmatch/003_process.expected
in file label_missmatch/003_process, line 11:
syntax error: Label mismatch in Process Statement
  Stimulus: process
  ~~~~~~~~ <<-- here
...
end process Stim; -- Stimulus vs. Stim
            ~~~~ <<-- and here
